--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/tailwind": "^6.0.2",
     "@fontsource-variable/geist": "^5.2.8",
     "astro": "^5.15.3",
-    "lucide-astro": "^0.552.0"
+    "autoprefixer": "^10.4.21",
+    "lucide-astro": "^0.552.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18"
   },
   "devDependencies": {
     "tailwindcss-animate": "^1.0.7"
