--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "autoprefixer": "^10.4.21",
     "lucide-astro": "^0.552.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.18"
+    "tailwindcss": "^3.4.18",
+    "vite-imagetools": "^9.0.0"
   },
   "devDependencies": {
     "tailwindcss-animate": "^1.0.7"
